hosted-workshop/lab-gs-java/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spawner
  annotations:
    homeroom/title: "Starter Guides (Java)"
    homeroom/description: "Getting Started with OpenShift for Java Developers"
spec:
  rules:
  - host: "lab-gs-java.${CLUSTER_SUBDOMAIN}"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: spawner
          servicePort: 8080
